--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-second-repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
@@ -12,5 +13,6 @@
     <h3>Newcode changed</h3>
     <p>more paragraph</p>
     <p>fhgvjhkuhyuftdgf</p>
+    <img src="203691860_1008054470021598_626739860036600751_n.jpg" alt="">
 </body>
 </html>
